cambio codice per inserimento indirizzi email

--- a/guidaemacsauctex.tex
+++ b/guidaemacsauctex.tex
@@ -98,23 +98,25 @@ inoltre necessario scaricare e installare nel proprio albero personale la classe
 \classstyle{guidatematica} disponibile alla pagina
 \url{https://github.com/GuITeX/guidatematica}.
 
-È gradita ogni forma di collaborazione. Chiunque voglia segnalare errori,
-refusi, commenti e suggerimenti può farlo agli indizizzi di posta elettronica
-qui riportati.
-
-Intanto ringraziamo qui Tommaso Gordini per aver, da letterato qual egli è, reso
-il testo più leggibile, oltre ad averci dato suggerimenti importanti per la
+Ringraziamo qui Tommaso Gordini per aver, da letterato qual egli è, reso il
+testo più leggibile, oltre ad averci dato suggerimenti importanti per la
 comprensione della guida.
 
-\begin{tabular}{cc}
-\hspace{.32\textwidth} & \textsc{Gli autori}                           \\[1.5ex]
-                       & \textsc{Mosè Giordano}                        \\
-                       & \texttt{giordano dot mose at libero dot it}   \\[0.5ex]
-                       & \textsc{Orlando Iovino}                       \\
-                       & \texttt{orlando dot iovino at yahoo dot it}   \\[0.5ex]
-                       & \textsc{Matteo Leccardi}                      \\
-                       & \texttt{matteo dot leccardi at gmail dot com} \\
-\end{tabular}
+È gradita ogni forma di collaborazione. Chiunque voglia segnalare errori,
+refusi, commenti e suggerimenti può farlo agli indirizzi di posta elettronica
+qui riportati.
+
+\begin{flushright}
+  \begin{minipage}{0.6\textwidth}\centering
+    \textsc{Gli autori}                           \\[1.5ex]
+    \textsc{Mosè Giordano}                        \\
+    \texttt{giordano dot mose at libero dot it}   \\[0.5ex]
+    \textsc{Orlando Iovino}                       \\
+    \texttt{orlando dot iovino at yahoo dot it}   \\[0.5ex]
+    \textsc{Matteo Leccardi}                      \\
+    \texttt{matteo dot leccardi at gmail dot com} \\
+  \end{minipage}
+\end{flushright}
 
 \newpage\tableofcontents*
 
