--- a/guidaemacsauctex.tex
+++ b/guidaemacsauctex.tex
@@ -99,18 +99,20 @@ inoltre necessario scaricare ed installare nel proprio albero personale la class
 \url{https://github.com/GuITeX/guidatematica}.
 
 È gradita ogni forma di collaborazione. Chiunque voglia segnalare errori,
-refusi, commenti e suggerimenti può farlo agli indizizzi di posta elettronica
+refusi, commenti e suggerimenti può farlo agli indirizzi di posta elettronica
 qui riportati.
 
-\begin{tabular}{cc}
-\hspace{.32\textwidth} & \textsc{Gli autori}                           \\[1.5ex]
-                       & \textsc{Mosè Giordano}                        \\
-                       & \texttt{giordano dot mose at libero dot it}   \\[0.5ex]
-                       & \textsc{Orlando Iovino}                       \\
-                       & \texttt{orlando dot iovino at yahoo dot it}   \\[0.5ex]
-                       & \textsc{Matteo Leccardi}                      \\
-                       & \texttt{matteo dot leccardi at gmail dot com} \\
-\end{tabular}
+\begin{flushright}
+  \begin{minipage}{0.6\textwidth}\centering
+    \textsc{Gli autori}                           \\[1.5ex]
+    \textsc{Mosè Giordano}                        \\
+    \texttt{giordano dot mose at libero dot it}   \\[0.5ex]
+    \textsc{Orlando Iovino}                       \\
+    \texttt{orlando dot iovino at yahoo dot it}   \\[0.5ex]
+    \textsc{Matteo Leccardi}                      \\
+    \texttt{matteo dot leccardi at gmail dot com} \\
+  \end{minipage}
+\end{flushright}
 
 \newpage\tableofcontents*
 
